--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <meta name="google-site-verification" content="Qt59BX7uvGBx53vyRIfDaV6lLVoZ8Sx3zMPFRxGQlMs" />
     <title>{{ site.title }} | {{site.affiliation}}</title>
 
     <meta charset="UTF-8">
